tests/ui/traits/suggest-fully-qualified-path-without-adjustment.stderr
error[E0282]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:45:15
   |
LL |     ref_thing.method();
   |               ^^^^^^
   |
help: try using a fully qualified path to specify the expected types
   |
LL |     <Thing as Method<T>>::method(ref_thing);
   |     +++++++++++++++++++++++++++++         ~

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:45:15
   |
LL |     ref_thing.method();
   |               ^^^^^^
   |
note: multiple `impl`s satisfying `Thing: Method<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:10:1
   |
LL | impl Method<i32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Method<u32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL |     <Thing as Method<T>>::method(ref_thing);
   |     +++++++++++++++++++++++++++++         ~

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:48:15
   |
LL |     ref_thing.by_self();
   |               ^^^^^^^
   |
note: multiple `impl`s satisfying `&Thing: MethodRef<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:23:1
   |
LL | impl MethodRef<i32> for &Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl MethodRef<u32> for &Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL |     <&Thing as MethodRef<T>>::by_self(ref_thing);
   |     ++++++++++++++++++++++++++++++++++         ~

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:51:15
   |
LL |     mut_thing.method();
   |               ^^^^^^
   |
note: multiple `impl`s satisfying `Thing: Method<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:10:1
   |
LL | impl Method<i32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Method<u32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL |     <Thing as Method<T>>::method(mut_thing);
   |     +++++++++++++++++++++++++++++         ~

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:52:15
   |
LL |     mut_thing.mut_method();
   |               ^^^^^^^^^^
   |
note: multiple `impl`s satisfying `Thing: Method<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:10:1
   |
LL | impl Method<i32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Method<u32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL |     <Thing as Method<T>>::mut_method(mut_thing);
   |     +++++++++++++++++++++++++++++++++         ~

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:53:15
   |
LL |     mut_thing.by_self();
   |               ^^^^^^^
   |
note: multiple `impl`s satisfying `&Thing: MethodRef<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:23:1
   |
LL | impl MethodRef<i32> for &Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl MethodRef<u32> for &Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL |     <&Thing as MethodRef<T>>::by_self(mut_thing);
   |     ++++++++++++++++++++++++++++++++++         ~

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:56:14
   |
LL |     deref_to.method();
   |              ^^^^^^
   |
note: multiple `impl`s satisfying `Thing: Method<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:10:1
   |
LL | impl Method<i32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Method<u32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL |     <Thing as Method<T>>::method(deref_to);
   |     +++++++++++++++++++++++++++++        ~

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:57:14
   |
LL |     deref_to.mut_method();
   |              ^^^^^^^^^^
   |
note: multiple `impl`s satisfying `Thing: Method<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:10:1
   |
LL | impl Method<i32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Method<u32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL |     <Thing as Method<T>>::mut_method(deref_to);
   |     +++++++++++++++++++++++++++++++++        ~

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:58:14
   |
LL |     deref_to.by_self();
   |              ^^^^^^^
   |
note: multiple `impl`s satisfying `&Thing: MethodRef<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:23:1
   |
LL | impl MethodRef<i32> for &Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl MethodRef<u32> for &Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL |     <&Thing as MethodRef<T>>::by_self(deref_to);
   |     ++++++++++++++++++++++++++++++++++        ~

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:61:20
   |
LL |     deref_deref_to.method();
   |                    ^^^^^^
   |
note: multiple `impl`s satisfying `Thing: Method<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:10:1
   |
LL | impl Method<i32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Method<u32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL |     <Thing as Method<T>>::method(deref_deref_to);
   |     +++++++++++++++++++++++++++++              ~

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:62:20
   |
LL |     deref_deref_to.mut_method();
   |                    ^^^^^^^^^^
   |
note: multiple `impl`s satisfying `Thing: Method<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:10:1
   |
LL | impl Method<i32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Method<u32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL |     <Thing as Method<T>>::mut_method(deref_deref_to);
   |     +++++++++++++++++++++++++++++++++              ~

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:63:20
   |
LL |     deref_deref_to.by_self();
   |                    ^^^^^^^
   |
note: multiple `impl`s satisfying `&Thing: MethodRef<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:23:1
   |
LL | impl MethodRef<i32> for &Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl MethodRef<u32> for &Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL |     <&Thing as MethodRef<T>>::by_self(deref_deref_to);
   |     ++++++++++++++++++++++++++++++++++              ~

error: aborting due to 12 previous errors

Some errors have detailed explanations: E0282, E0283.
For more information about an error, try `rustc --explain E0282`.
